--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
     "description"    : "A neat way of handling views on other components",
     "homepage"       : "https://github.com/coma/react-socket",
     "repository"     : "https://github.com/coma/react-socket",
-    "main"           : "./src/index.js",
-    "version"        : "0.1.3",
     "license"        : "MIT",
     "private"        : false,
     "authors"        : [
@@ -12,42 +10,21 @@
     ],
     "keywords"       : [
         "react",
+        "reactjs",
         "socket.io"
     ],
     "dependencies"   : {
-        "react"           : "0.13",
-        "socket.io-client": "1.3"
+        "react"       : "0.13",
+        "react-socket": "*"
     },
     "devDependencies": {
-        "proxyquire": "1.5",
-        "jsdom"     : "5.4",
-        "mocha"     : "2.2",
-        "should"    : "7.0",
-        "eslint"    : "0.24"
+        "browserify": "9.0",
+        "babelify"  : "6.1"
     },
     "scripts"        : {
-        "lint": "eslint src",
-        "test": "npm run lint && mocha"
-    },
-    "eslintConfig"   : {
-        "env"  : {
-            "node": true
-        },
-        "rules": {
-            "strict"                     : 0,
-            "new-cap"                    : 0,
-            "eqeqeq"                     : 2,
-            "curly"                      : 2,
-            "quotes"                     : [
-                1,
-                "single"
-            ],
-            "no-unreachable"             : 2,
-            "space-before-blocks"        : 2,
-            "space-before-function-paren": 2,
-            "no-multi-spaces"            : 0,
-            "key-spacing"                : 0,
-            "no-mixed-requires"          : 0
-        }
+        "build"     : "browserify src.js -t babelify --outfile dist.js",
+        "git-commit": "git add -A . && git commit -a -m 'gh-pages update'",
+        "git-push"  : "git push origin gh-pages --force",
+        "deploy"    : "npm run build && npm run git-commit && npm run git-push"
     }
 }
