--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     },
     "devDependencies": {
         "browserify": "9.0",
-        "babelify"  : "6.1"
+        "babelify"  : "6.1",
+        "uglify-js" : "2.4"
     },
     "scripts"        : {
         "build"     : "browserify src.js -t babelify --outfile dist.js",
+        "minify"    : "uglifyjs dist.js -o dist.js",
         "git-commit": "git add -A . && git commit -a -m 'gh-pages update'",
         "git-push"  : "git push origin gh-pages --force",
-        "deploy"    : "npm run build && npm run git-commit && npm run git-push"
+        "deploy"    : "npm run build && npm run minify && npm run git-commit && npm run git-push"
     }
 }
