--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "homepage"       : "https://github.com/coma/react-socket",
     "repository"     : "https://github.com/coma/react-socket",
     "main"           : "./src/index.js",
-    "version"        : "0.1.3",
+    "version"        : "0.1.4",
     "license"        : "MIT",
     "private"        : false,
     "authors"        : [
@@ -12,7 +12,8 @@
     ],
     "keywords"       : [
         "react",
-        "socket.io"
+        "socket.io",
+        "react-component"
     ],
     "dependencies"   : {
         "react"           : "0.13",
