--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "react-component"
     ],
     "dependencies"   : {
-        "react"           : "0.13",
-        "socket.io-client": "1.3"
+        "socket.io-client": "^1.4"
+    },
+    "peerDependencies"   : {
+        "react"           : "^0.13 || ^0.14 || ^15.0.0"
     },
     "devDependencies": {
         "proxyquire": "1.5",
