--- a/package.json
+++ b/package.json
@@ -1,54 +1,49 @@
 {
-    "name"           : "react-socket",
-    "description"    : "A neat way of handling views on other components",
-    "homepage"       : "https://github.com/coma/react-socket",
-    "repository"     : "https://github.com/coma/react-socket",
-    "main"           : "./src/index.js",
-    "version"        : "0.1.4",
-    "license"        : "MIT",
-    "private"        : false,
-    "authors"        : [
-        "Eduardo García Sanz <eduardo@comakai.com>"
-    ],
-    "keywords"       : [
+    "name"            : "react-socket",
+    "description"     : "A neat way of handling views on other components",
+    "homepage"        : "https://github.com/coma/react-socket",
+    "repository"      : {
+        "type": "git",
+        "url" : "git://github.com/coma/react-socket.git"
+    },
+    "bugs"            : {
+        "url"  : "https://github.com/coma/react-socket/issues",
+        "email": "eduardo@sincrolab.es"
+    },
+    "author"          : {
+        "name" : "Eduardo García Sanz",
+        "email": "eduardo@comakai.com"
+    },
+    "main"            : "lib",
+    "version"         : "1.0.0-beta.0",
+    "license"         : "MIT",
+    "private"         : false,
+    "keywords"        : [
         "react",
         "socket.io",
         "react-component"
     ],
-    "dependencies"   : {
-        "react"           : "0.13",
-        "socket.io-client": "1.3"
+    "peerDependencies": {
+        "react": "^15.3.1"
     },
-    "devDependencies": {
-        "proxyquire": "1.5",
-        "jsdom"     : "5.4",
-        "mocha"     : "2.2",
-        "should"    : "7.0",
-        "eslint"    : "0.24"
+    "dependencies"    : {
+        "socket.io-client": "^1.4.8"
     },
-    "scripts"        : {
-        "lint": "eslint src",
-        "test": "npm run lint && mocha"
+    "devDependencies" : {
+        "babel-cli"           : "^6.7.5",
+        "babel-core"          : "^6.7.6",
+        "babel-eslint"        : "^6.0.3",
+        "babel-preset-es2015" : "^6.6.0",
+        "babel-preset-react"  : "^6.5.0",
+        "babel-preset-stage-2": "^6.5.0",
+        "eslint"              : "^3.4.0",
+        "react"               : "^15.3.1"
     },
-    "eslintConfig"   : {
-        "env"  : {
-            "node": true
-        },
-        "rules": {
-            "strict"                     : 0,
-            "new-cap"                    : 0,
-            "eqeqeq"                     : 2,
-            "curly"                      : 2,
-            "quotes"                     : [
-                1,
-                "single"
-            ],
-            "no-unreachable"             : 2,
-            "space-before-blocks"        : 2,
-            "space-before-function-paren": 2,
-            "no-multi-spaces"            : 0,
-            "key-spacing"                : 0,
-            "no-mixed-requires"          : 0
-        }
+    "scripts"         : {
+        "lint"      : "eslint src",
+        "test"      : "npm run lint",
+        "clean"     : "rm -rf lib/*.*",
+        "build"     : "npm run clean && babel src -d lib",
+        "prepublish": "npm run build"
     }
 }
