--- a/package.json
+++ b/package.json
@@ -30,20 +30,30 @@
         "socket.io-client": "^1.4.8"
     },
     "devDependencies" : {
-        "babel-cli"           : "^6.7.5",
-        "babel-core"          : "^6.7.6",
-        "babel-eslint"        : "^6.0.3",
-        "babel-preset-es2015" : "^6.6.0",
-        "babel-preset-react"  : "^6.5.0",
-        "babel-preset-stage-2": "^6.5.0",
-        "eslint"              : "^3.4.0",
-        "react"               : "^15.3.1"
+        "babel-cli"              : "^6.7.5",
+        "babel-core"             : "^6.7.6",
+        "babel-eslint"           : "^6.0.3",
+        "babel-preset-es2015"    : "^6.6.0",
+        "babel-preset-react"     : "^6.5.0",
+        "babel-preset-stage-2"   : "^6.5.0",
+        "eslint"                 : "^3.4.0",
+        "enzyme"                 : "^2.2.0",
+        "faucet"                 : "0.0.1",
+        "glob"                   : "^7.0.6",
+        "nyc"                    : "^8.1.0",
+        "react"                  : "^15.3.1",
+        "react-addons-test-utils": "^15.0.1",
+        "sinon"                  : "^1.17.4",
+        "tape"                   : "^4.5.1",
+        "webpack"                : "2.1.0-beta.20"
     },
     "scripts"         : {
         "lint"      : "eslint src",
-        "test"      : "npm run lint",
+        "test"      : "NODE_ENV=test babel-node test",
+        "cover"     : "nyc --reporter=lcov --reporter=text npm test",
         "clean"     : "rm -rf lib/*.*",
         "build"     : "npm run clean && babel src -d lib",
-        "prepublish": "npm run build"
+        "dist"      : "webpack --optimize-minimize lib/dist.js dist.js",
+        "prepublish": "npm run build && npm run dist"
     }
 }
